--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 /* Basic Style */
-body {
+.body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.matrix {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.matrix__img {
   width: 100%;
 }
-.aaa .more_inf {
+.matrix__link {
   font-family: fantasy, cursive;
 }
 
@@ -24,45 +24,40 @@ body {
   }
   
 }
-.centered-main-page-element {
+.tasks {
   display: block;
   width: 500px;
   margin: 0 auto 0;
+  padding: 0px;
 }
-.task {
+.tasks-list {
+  padding: 0;
+}
+.tasks-list__input,
+.tasks-list__label {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
-}
-.task-row-wrapper {
-  display: flex;
-}
-ul {
-  margin: 0;
-  padding: 0px;
-}
-li, 
-h3 {
-  list-style: none;
-}
-input,
-button{
   outline: none;
 }
-button {
+.tasks-list__row-wrapper {
+  display: flex;
+}
+.button {
   background: none;
   border: 0px;
   color: #888;
   font-size: 15px;
   width: 60px;
   font-family: Lato, sans-serif;
+  outline: none;
   cursor: pointer;
 }
-button:hover {
+.button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3 {
+.title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -71,7 +66,7 @@ h3 {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.tasks-list__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,76 +77,71 @@ input[type="text"] {
   border-radius: 6px;
   font-family: Lato, sans-serif;
   color: #888;
+  width: 226px;
 }
-input[type="text"]:focus {
+.tasks-list__input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
-  display: block;
-  margin: 0 0 20px;
-}
-input#new-task {
+.tasks-list__input_new {
   width: 318px;
 }
 
-.task-row-wrapper {
+.tasks-list__row-wrapper {
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
 /* Task list */
-li {
+.tasks-list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
+  list-style: none;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-li > * {
-  vertical-align: middle;
-}
 
-li > input[type="checkbox"] {
+.tasks-list__input_checkbox {
   margin: 0 10px;
 }
-li > label {
+.tasks-list__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
-  width: 226px;
+.tasks-list__label_new {
+  font-size: 15px;
+  padding-left: 0;
 }
-button.delete img {
+.button_delete__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.button_delete__img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.tasks-list__label_completed {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.tasks-list__input_removed {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+.tasks-list__item_edit .tasks-list__input {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.tasks-list__item_edit .tasks-list__label {
   display: none;
 }
